--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 
 .DS_Store
 Makefile
+hogehogefoofoobarbar/Builds/*
 
+!hogehogefoofoobarbar.xcodeproj/project.pbxproj 
 hogehogefoofoobarbar.xcodeproj/*
-!*.xcodeproj/project.pbxproj 
-!*.xcodeproj/default.*
-
